--- a/source/stylesheets/modules/_m-intro.css.scss
+++ b/source/stylesheets/modules/_m-intro.css.scss
@@ -16,21 +16,24 @@ $m : '.m-intro';
     text-align: center;
     white-space: nowrap;
     border-top: 10px solid #000;
-    border-bottom: 10px solid #000;
-    padding-top: 0.1em;
 
     @media (max-width: $break_medium) {
       font-size: 46px;
       letter-spacing: 8px;
       text-indent: 8px;
     }
+
+    & + p {
+      margin-top: 0;
+    }
   }
 
   @media (max-width: $break_medium) {
     max-width: $column_width * 4;
   }
-}
 
+  
+}
 #intro {
   @media (min-width: $break_medium) {
     background-image: image-url('/images/50.png'), image-url('/images/name-collage-right.png');
